change heading cau-chuyen

--- a/huu-ich/cau-chuyen/index.html
+++ b/huu-ich/cau-chuyen/index.html
@@ -217,7 +217,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dd>Một cách nhìn khác về việc tích-luỹ tài-sản.</dd>
   <dt><a href='kakeibo'>Tiết-kiệm tiền kiểu Nhật</a></dt>
   <dd>Người Nhật dùng công-cụ gì trong việc tiết-kiệm.</dd>
-  <dt><a href='bot-lo-ve-tien'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a></dt>
+  <dt><a href='bot-lo-ve-tien'>Sáu điều giúp tôi bớt lo-lắng về tiền-bạc</a></dt>
   <dd>Không giàu-sang nhưng vẫn không quá lo-lắng về tiền-bạc.</dd>
   <dt><a href='sinh-lao-benh-tu'>Sinh Lão Bệnh Tử</a></dt>
   <dd>Điều gì đáng sợ hơn: Bệnh hay Tử?</dd>
@@ -225,7 +225,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dd>Một câu-chuyện không có thật nhưng cũng có bài-học trong đó.</dd>
 </dl>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
