--- a/y-kien/dung-hang-viet-nam.html
+++ b/y-kien/dung-hang-viet-nam.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Dùng hàng Việt Nam</div>
-<div class="right"><a href="https://web.archive.org/web/20140604195948/http://lhboi.homelinux.net/opinions/dung-hang-viet-nam.html" target='_blank'>Viết lần đầu trong năm 2002</a>.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,18 +230,22 @@ https://lehboi.github.io/y-kien/dung-hang-viet-nam
     </amp-facebook-like>
   </div>
 
-<h3>Mỗi người tiêu dùng chúng ta mua sắm như thế nào thì nước Việt Nam bớt nghèo?</h3>
-<p>Xin nói trước, những điều tôi viết trong bài này theo kiểu chẻ cọng tóc làm tám, đó là thói quen suy nghĩ của tôi; và có thể có những điều không theo một lý thuyết kinh tế học nào vì tôi không phải là người chuyên nghiên cứu kinh tế học. Tất cả chỉ xoay quanh một điều là <b>dùng <i>hàng Việt Nam</i></b>.<br />
-Trong bài này:</p>
-<ul><li>chữ <i>hàng</i> có nghĩa là hàng hoá hoặc là dich vụ;</li>
+  <h1>Dùng hàng Việt Nam</h1>
+<div class="right"><a href="https://web.archive.org/web/20140604195948/http://lhboi.homelinux.net/opinions/dung-hang-viet-nam.html" target='_blank'>Viết lần đầu trong năm 2002</a>.</div>
+<h2>Mỗi người tiêu dùng chúng ta mua sắm như thế nào thì nước Việt Nam bớt nghèo?</h2>
+<p>Xin nói trước, những điều tôi viết trong bài này theo kiểu chẻ cọng tóc làm tám, đó là thói quen suy nghĩ của tôi; và có thể có những điều không theo một lý thuyết kinh tế học nào vì tôi không phải là người chuyên nghiên cứu kinh tế học. Tất cả chỉ xoay quanh một điều là <b>dùng <i>hàng Việt Nam</i></b>.
+<br>Trong bài này:</p>
+<ul>
+<li>chữ <i>hàng</i> có nghĩa là hàng hoá hoặc là dich vụ;</li>
 <li>hàng hoá Việt Nam là hàng được sản xuất và bán ở Việt Nam, trong quá trình sản xuất có thể dùng nguyên liệu ngoại nhập, nhà sản xuất có thể có vốn từ nước ngoài;</li>
-<li>hàng hoá ngoại nhập là hàng được sản xuất ở nước ngoài và bán ở Việt Nam.</li></ul>
-<p><big><big>Tại sao nên dùng <i>hàng Việt Nam</i>?</big></big><br />
-Vì khi mua một món <i>hàng Việt Nam</i> người mua đã làm lợi cho người Việt Nam nhiều hơn so với khi mua một món hàng ngoại nhập có giá tương đương.<br />
+<li>hàng hoá ngoại nhập là hàng được sản xuất ở nước ngoài và bán ở Việt Nam.</li>
+</ul>
+<h3>Tại sao nên dùng <i>hàng Việt Nam</i>?</h3>
+<p>Vì khi mua một món <i>hàng Việt Nam</i> người mua đã làm lợi cho người Việt Nam nhiều hơn so với khi mua một món hàng ngoại nhập có giá tương đương.<br />
 Nếu mua hàng ngoại nhập thì chỉ có người bán hàng Việt Nam (bán buôn và/hoặc bán lẻ) được hưởng một phần lợi, phần lợi còn lại người sản xuất ở nước ngoài hưởng. Trong khi đó, nếu mua <i>hàng Việt Nam</i> thì còn có thêm những người sản xuất Việt Nam được hưởng lợi.</p>
 <blockquote>Người sản xuất ở đây bao gồm người đầu tư cho việc sản xuất, người tham gia trực tiếp hay gián tiếp sản xuất. <a href="/huu-ich/de-tien-vao-dau">Người đầu tư</a> thì được hưởng lợi nhuận trên món hàng. Người tham gia sản xuất thì có được việc làm, được hưởng lương.<br />
-Phần lớn người tham gia sản xuất <i>hàng Việt Nam</i> là người Việt Nam, cũng có người nước ngoài nhưng ít hơn nhiều.<br />
-Trong khi đó, có khá nhiều nhà đầu tư nước ngoài sản xuất hàng ở Việt Nam và bán ở Việt Nam, trong trường hợp này thì khoản lợi sẽ không ở lại Việt Nam. Trong xu hướng cổ phần hoá các công ty thì khó phân biệt được một công ty do nhà đầu tư trong nước hay nước ngoài làm chủ vì người Việt Nam cũng có thể trở thành <a href="/huu-ich/de-tien-vao-dau">nhà đầu tư</a> của các công ty nước ngoài như là Taya, và ngược lại người nước ngoài cũng có thể trở thành nhà đầu tư của các công ty cổ phần trong nước như là Kinh Đô. Bạn hãy bắt đầu làm nhà đầu tư để được hưởng lợi khi dùng hàng Việt Nam.</blockquote>
+Phần lớn người tham gia sản xuất <i>hàng Việt Nam</i> là người Việt Nam, cũng có người nước ngoài nhưng ít hơn nhiều.
+<br>Trong khi đó, có khá nhiều nhà đầu tư nước ngoài sản xuất hàng ở Việt Nam và bán ở Việt Nam, trong trường hợp này thì khoản lợi sẽ không ở lại Việt Nam. Trong xu hướng cổ phần hoá các công ty thì khó phân biệt được một công ty do nhà đầu tư trong nước hay nước ngoài làm chủ vì người Việt Nam cũng có thể trở thành <a href="/huu-ich/de-tien-vao-dau">nhà đầu tư</a> của các công ty nước ngoài như là Taya, và ngược lại người nước ngoài cũng có thể trở thành nhà đầu tư của các công ty cổ phần trong nước như là Kinh Đô. Bạn hãy bắt đầu làm nhà đầu tư để được hưởng lợi khi dùng hàng Việt Nam.</blockquote>
 <p>Như vậy, dùng <i>hàng Việt Nam</i> tức là tạo ra việc làm cho đồng bào của ta, có thể là thân nhân của ta. Ví dụ cụ thể, khi mua hộp bánh Kinh Đô ta làm lợi cho người Việt Nam nhiều hơn khi mua hộp bánh Hongkong hay Mã Lai hay Nhật hay Đan Mạch</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -279,12 +276,14 @@ data-ad-slot="3830899615">
 <p>Dùng hàng Việt Nam không những làm lợi cho đồng bào, thân nhân, bạn bè mà còn có thể làm lợi trực tiếp cho chính mình. Nếu bạn đang làm việc tại những công ty cung cấp dịch vụ hay hàng hoá trực tiếp đến người tiêu dùng hoặc nằm trong chuỗi cung ứng thì dùng hàng Việt đem lại lợi nhuận cho công ty bạn, đem lại thu nhập cho bạn. Nếu bạn đang làm việc cho nhà nước thì dùng hàng Việt làm tăng thuế tức là tăng nguồn lương của bạn.</p>
 <p>Nghĩ kỹ hơn thì ta còn có thể xét đến tỉ lệ thành phần Việt Nam trong món hàng, ví dụ như nguồn gốc nguyên liệu làm ra món hàng. Tỉ lệ thành phần Việt Nam trong món hàng càng cao thì đem lại lợi cho ích cho đồng bào càng nhiều. Tuy nhiên, rất khó có thể biết được <i>chính xác</i> tỉ lệ đó, chỉ có thể <i>đoán</i> được trong món hàng có một phần nguyên liệu trong nước hay ngoại nhập.</p>
 <p>Giả sử các món hàng là có thể thay thế lẫn nhau được (có cùng chất lượng, tính năng…), thì ta xếp thứ tự ưu tiên theo nguồn gốc món hàng như sau, xếp trên là ưu tiên hơn.</p>
-<ol><li><i>Hàng Việt Nam</i> sản xuất từ nguyên liệu Việt Nam,</li>
+<ol>
+<li><i>Hàng Việt Nam</i> sản xuất từ nguyên liệu Việt Nam,</li>
 <li><i>Hàng Việt Nam</i> sản xuất từ nguyên liệu ngoại nhập,</li>
 <li>Hàng ngoại nhập.</li>
 </ol>
 Ví dụ:
-<ol><li>bóng đèn Điện quang có một phần nguyên liệu trong nước là thủy tinh, bóng đèn Philips do nhà máy Philips ở Việt Nam sản xuất cũng vậy,</li>
+<ol>
+<li>bóng đèn Điện quang có một phần nguyên liệu trong nước là thủy tinh, bóng đèn Philips do nhà máy Philips ở Việt Nam sản xuất cũng vậy,</li>
 <li>kem Vinamilk có một phần nguyên liệu trong nước,</li>
 <li>sữa bột Vinamilk có phần lớn nguyên liệu ngoại nhập (bây giờ, năm 2012, thì Vinamilk <a href="https://web.archive.org/web/20120604045130/https://sgtt.vn/Kinh-te/164689/Dung-xong-thap-say-sua-bot-so-2-cua-nha-may-Dielac-2.html" target="_blank">sản xuất nhiều sữa bột</a> từ sữa bò tươi trong nước),</li>
 <li>bánh ngọt Kinh Đô có phần lớn nguyên liệu ngoại nhập,</li>
@@ -292,12 +291,16 @@ Ví dụ:
 </ol>
 <p>Tóm lại, khó mà tính được khi dùng hàng Việt Nam thì bao nhiêu phần lợi ở lại trong nước, bao nhiêu đi ra nước ngoài, chỉ cần biết một điều: <strong>dùng hàng Việt Nam thì lợi cho nước Việt hơn dùng hàng ngoại</strong>.</p>
 <p>Phần trên, ta chỉ bàn đến những hàng có thể thay thế lẫn nhau. Nhưng có những trường hợp <i>hàng Việt Nam</i> không thể thay thế hàng ngoại. Khi đó bắt buộc ta phải dùng hàng ngoại. Nhưng, vì mục đích làm lợi cho nước nhà ta hãy dành đủ thì giờ tìm kiếm trước khi kết luận là không có <i>hàng Việt Nam</i> hợp nhu cầu của ta, vì đôi khi có mà ta không biết. Một vài lý do làm cho ta không biết:</p>
-<ul><li>Hàng không được nổi tiếng (quảng cáo không đủ, hệ thống phân phối không mạnh)</li>
+<ul>
+<li>Hàng không được nổi tiếng (quảng cáo không đủ, hệ thống phân phối không mạnh)</li>
 <li>Ta nghĩ rằng <i>hàng Việt Nam</i> không đạt nhu cầu trong khi thật ra nó thoả mãn đủ các yêu cầu của ta</li>
-<li>Hàng ngoại có nhiều tính năng hơn <i>hàng Việt Nam</i>, nhưng thật ra ta lại chưa cần đến các tính năng đó (cho đến khi món hàng đó hết tuổi thọ), hoặc tính năng đó không thật cần thiết.</li></ul>
+<li>Hàng ngoại có nhiều tính năng hơn <i>hàng Việt Nam</i>, nhưng thật ra ta lại chưa cần đến các tính năng đó (cho đến khi món hàng đó hết tuổi thọ), hoặc tính năng đó không thật cần thiết.</li>
+</ul>
 Vậy để làm gì để tránh những kiểu không biết trên?
-<ul><li>Quan tâm nhiều hơn đến thông tin <i>hàng Việt Nam</i> chất lượng cao,</li>
-<li>Trước khi quyết định không mua một món <i>hàng Việt Nam</i> vì nó thiếu một tính năng nào đó so với hàng ngoại, hãy nghĩ lại xem tính năng đó có thật cần thiết không</li></ul>
+<ul>
+<li>Quan tâm nhiều hơn đến thông tin <i>hàng Việt Nam</i> chất lượng cao,</li>
+<li>Trước khi quyết định không mua một món <i>hàng Việt Nam</i> vì nó thiếu một tính năng nào đó so với hàng ngoại, hãy nghĩ lại xem tính năng đó có thật cần thiết không</li>
+</ul>
 <p>Cuối cùng, những điều trên không ngăn cản ta dùng hàng ngoại nếu giá tiền rẻ hơn mà giá trị sử dụng cao hơn. Và cũng không ngăn ta thỉnh thoảng dùng thử một ít thực phẩm ngoại (nhưng đừng thay thế hẳn thực phẩm trong nước).</p>
 <div class="todiscuss">
 Các bài liên quan:
@@ -330,7 +333,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
