--- a/home/about.html
+++ b/home/about.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Thân-thế</title>
-<meta name="description" content="Thân-thế Lê Hồng Bội, tư-vấn tài-chính-gia-đình" />
+<title>Giới-thiệu sơ về Thân-thế Lê Hồng Bội</title>
+<meta name="description" content="Thân-thế Lê Hồng Bội, tư-vấn tài-chính-gia-đình ở Saigon" />
 <meta name="keywords" content="about">
 <link rel="alternate" href="https://www.lhboi.name.vn/home/about">
 <link rel="canonical" href="https://lehboi.github.io/home/about">
@@ -368,7 +368,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
