--- a/huu-ich/cau-chuyen/bat-dau-dau-tu.html
+++ b/huu-ich/cau-chuyen/bat-dau-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bắt đầu đầu tư</title>
+<title>Bắt đầu đầu tư càng sớm càng tốt</title>
 <meta name="description" content="Bắt đầu đầu tư như thế nào, bắt đầu sớm thì lợi bao nhiêu?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, hưu trí, lãi kép">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cau-chuyen/bat-dau-dau-tu">
@@ -381,7 +381,7 @@ data-ad-slot="3830899615">
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132815538449670144" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/636092159889729" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
