--- a/huu-ich/cau-chuyen/tranh-mang-no.html
+++ b/huu-ich/cau-chuyen/tranh-mang-no.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tránh mang nợ</title>
+<title>Phải tránh những khoản nợ dù lớn hay nhỏ</title>
 <meta name="description" content="Tránh mang nợ để đầu óc thanh thản, cuộc sống ổn định. Phải cẩn thận khi dùng thẻ tín dụng." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, nợ">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cau-chuyen/tranh-mang-no">
@@ -230,7 +230,7 @@ https://lehboi.github.io/huu-ich/cau-chuyen/tranh-mang-no
     </amp-facebook-like>
   </div>
 
-  <h1>Tránh mang nợ</h1>
+  <h1>Phải tránh những khoản nợ dù lớn hay nhỏ</h1>
   <p>Thẻ tín dụng chưa đến mức phổ biến ở Việt Nam, nhưng cũng đã có người giắt vài thẻ tín dụng trong bóp. Các ngân hàng đang ráo riết mời dân chúng dùng thẻ tín dụng với lý do "dùng trước, trả tiền sau" là có lợi "vì được vay tiền không trả lãi đến 45 ngày".
   <br>Tính kỹ ra thì không có lợi chút nào. Dùng trước nhưng phải có đủ tiền để trả khi đến kỳ thanh toán, nếu không sẽ bủn rủn vì lãi suất. Như vậy để an toàn thì luôn luôn phải có tiền mới quẹt thẻ, tiền chỉ nằm lại trong tài khoản thêm ít ngày, sinh lãi có bao nhiêu đâu. Giả sử bạn thường chi mỗi tháng 10 triệu đồng qua thẻ tín dụng, như trên đã nói bạn cũng sẽ có 10 triệu đồng trong tài khoản từ kỳ lãnh lương đến ngày thanh toán số nợ thẻ. 10 triệu đồng nằm trong tài khoản không quá 30 ngày, với lãi suất không kỳ hạn thì tiền lãi có được chừng hơn 10 ngàn đồng. Trong khi đó hàng năm bạn phải trả phí thường niên cho thẻ từ 200 ngàn đến 500 ngàn đồng. Các ngân hàng thường có các đợt khuyến mãi miễn phí thường niên năm đầu, năm sau sẽ thu. Nếu bạn lên lịch chính xác thì bạn có thể dùng thẻ tín dụng miễn phí thường niên trong năm đầu và đến tuần cuối cùng đem thẻ đến trả cho ngân hàng để khỏi bị tính phí thường niên của năm thứ hai. Như vậy thẻ sẽ giúp bạn lợi được chừng 100 ngàn đồng một năm, và phải nhớ thanh toán đúng hạn 12 lần (trễ một ngày cũng bị tính lãi và phạt thanh toán trễ), có đáng để dùng không? Đối với tôi thì không.
   <br>Nếu bạn chi qua thẻ mỗi tháng nhiều hơn thì khoản tiền lời do trả chậm cũng nhiều hơn, nhưng chi nhiều hơn thì cần phải dùng hạng thẻ vàng, thẻ bạch kim và phí thường niên cũng cao hơn! Cuối cùng vẫn không lợi chút nào.
@@ -381,7 +381,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
