--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Quỹ đầu tư</title>
+<title>Tìm hiểu về Quỹ đầu tư</title>
 <meta name="description" content="Giải thích về quỹ đầu tư, trái phiếu, cổ phiếu, quỹ mở, quỹ đóng, rủi ro khi đầu tư vào quỹ" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, quỹ đầu tư">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/quy-dau-tu">
@@ -446,7 +446,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
