--- a/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
+++ b/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tần số của TV</title>
-<meta name="description" content="Phân biệt các con số về tần số của TV, LCD, plasma" />
+<title>Phân biệt các Tần số của màn hình TV</title>
+<meta name="description" content="Phân biệt các con số về tần số của màn hình TV, LCD, plasma" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/tan-so-cua-tv">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/tan-so-cua-tv">
@@ -230,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/tan-so-cua-tv
     </amp-facebook-like>
   </div>
 
-  <h1>Tần số của TV</h1>
+  <h1>Tần số của màn hình TV</h1>
   <p>Nếu đang chọn mua một cái TV LCD hoặc Plasma bạn sẽ phải bối rối trước các con số Hz khác nhau liên quan đến các TV này. Bài này tóm tắt những thông tin chính về các con số đó.</p>
   <p>Để cho vấn đề được trình bày có đầu, có đuôi, chúng ta sẽ bắt đầu từ một con số có từ trước khi có cái TV đầu tiên trên thế giới: đó là 24 hình mỗi giây.
   <br>Đa số phim nhựa được chiếu lên màn ảnh ở tốc độ 24 hình mỗi giây. Lúc ban đầu, phim chưa có tiếng thì có thể được chiếu ở tốc độ khoảng 16-23 hình mỗi giây, đủ cho người xem có cảm giác hình ảnh chuyển động tự nhiên. Từ những năm 1920, khi bắt đầu sản xuất phim có tiếng thì tốc độ được chọn là 24 hình mỗi giây. 24 là con số nhỏ nhất để tiếng trong phim có chất lượng đủ tốt. (<a href="https://en.wikipedia.org/wiki/Film" target="_blank">Xem wikipedia</a>)</p>
