--- a/kinh-nghiem/may-tinh/cashflow.html
+++ b/kinh-nghiem/may-tinh/cashflow.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Cashflow</title>
+<title>Trò chơi Cashflow để học kinh nghiệm quản lý tài sản</title>
 <meta name="description" content="Trò chơi Cashflow do Robert Kiyosaki nghĩ ra, rất thích hợp để mỗi người học kinh nghiệm quản lý tiền của cá nhân và gia đình sao cho mau tự do tài chính." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, cashflow">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/cashflow">
@@ -230,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/cashflow
     </amp-facebook-like>
   </div>
 
-  <h1>Cashflow</h1>
+  <h1>Trò chơi Cashflow</h1>
 <div class="inlineleft"><amp-img alt="Cashflow game set" height="110" src="/images/cashflowgamesg-board-101c509.jpg" width="200" height="110" layout="fixed"></amp-img></div>
 <p>Trò chơi Cashflow do Robert Kiyosaki nghĩ ra, rất thích hợp để mỗi người học kinh nghiệm quản lý tiền của cá nhân và gia đình sao cho mau <a href="/huu-ich/chi-tieu">tự do tài chính</a>. Có thể chơi Cashflow với bộ trò chơi gồm xúc xắc, bảng in sẵn hoặc có thể chơi qua web. Chơi qua web thì đỡ tốn công ghi chép và cộng trừ.
 <br>Mỗi ván Cashflow trên web gồm 1 tới 6 bên, mỗi bên dùng một máy tính. Từ 10 tuổi trở lên là có thể chơi được. Nếu muốn vừa chơi vừa chat với nhau thì hẹn nhau cùng chơi online, người đầu tiên create game với password. những người tiếp theo join vào game để chơi. Nếu không thể hẹn được với bạn thì chơi một mình.</p>
@@ -331,7 +331,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
