--- a/kinh-nghiem/may-tinh/roaming.html
+++ b/kinh-nghiem/may-tinh/roaming.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Wi-Fi Roaming</title>
-<meta name="description" content="Wi-Fi Roaming" />
+<title>Lắp mạng Wi-Fi Roaming cho những máy di động trong gia đình</title>
+<meta name="description" content="Lắp mạng Wi-Fi Roaming cho những máy di động trong gia đình khi nhà có nhiều phòng, nhiều tầng" />
 <meta name="keywords" content="Wi-Fi, roaming">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/roaming">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/roaming">
@@ -364,7 +364,7 @@ Tuy nhiên, có nhiều trường hợp chúng ta không thể nối dây Ethern
 <br>Các Wi-Fi AP đời mới nối với nhau qua sóng Wi-Fi theo cách mesh: các AP ở gần nhau tự động thiết lập mạng lưới truyền thông tin với nhau để thông tin được truyền ra Internet.
 </p>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
