--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ví-điện-tử</title>
+<title>Nhận xét về các Ví-điện-tử ở Việt-Nam</title>
 <meta name="description" content="Nhận-xét ban-đầu về ví-điện-tử ở Việt-Nam" />
 <meta name="keywords" content="hữu-ích, tài-chính, cá-nhân, ví-điện-tử, wallet, MoMo, ZaloPay, ViettelPay, GrabPay-by-Moca">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/vi-dien-tu">
@@ -497,7 +497,7 @@ data-ad-slot="3830899615">
 <h2>Pi Network</h2>
 <p>Dự án <a href="pi-network">Pi Network</a> đang phát triển với mục tiêu trở thành một ví điện tử dựa trên blockchain với hàng tỷ người sử dụng trên khắp thế giới. Mục tiêu của Pi là trở thành ví điện tử thông dụng như MoMo, ZaloPay, AliPay, WeChat Pay để mua bán mọi thứ hàng-hoá và dịch-vụ trong đời sống hàng ngày cả mua-bán trực-tiếp lẫn mua-bán qua Internet.</p>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
