--- a/y-kien/bat-ca-hai-tay.html
+++ b/y-kien/bat-ca-hai-tay.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bắt cá hai tay</title>
+<title>Bắt cá hai tay nghĩa là gì?</title>
 <meta name="description" content="Bắt cá hai tay nghĩa là gì? Có nên bắt cá hai tay?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, Bắt cá hai tay">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/bat-ca-hai-tay">
@@ -230,7 +230,7 @@ https://lehboi.github.io/y-kien/bat-ca-hai-tay
     </amp-facebook-like>
   </div>
 
-  <h1>Bắt cá hai tay</h1>
+  <h1>Bắt cá hai tay nghĩa là gì?</h1>
 <p>Nhiều người vẫn hiểu thành ngữ <b>Bắt cá hai tay</b> theo cách nôm na là dùng <i>tay</i> bắt con <i>cá</i>, rồi còn suy diễn thêm là dùng hai tay bắt một con cá hay là dùng hai tay bắt hai con cá… Tôi thì thích <a href="https://www.bachkhoatrithuc.vn/encyclopedia/4324-1528-633778083374062500/Hoi-dap-Dong-Tay/Bat-ca-hai-tay-hay-bat-ca-hai-tay.htm" target="_blank">cách giải nghĩa của học giả An Chi</a> hơn. Theo nghĩa này thì cá là <i>cá cược</i>, bắt cá hai tay là cá cược cùng lúc hai bên.</p>
 <h2>Tại sao lại bắt cá cùng lúc hai bên?</h2>
 <p>Cá cược là một việc có tính chất may rủi. Ta không thể kiểm soát hoàn toàn kết quả, vì nếu như vậy là gian lận, ai muốn bắt cá với ta nữa. Bởi vì không thể kiểm soát hoàn toàn kết quả nên không thể chắc thắng mười mươi, vẫn luôn luôn có nguy cơ thua. Người khôn ngoan sẽ nghĩ đến việc giảm bớt thiệt hại khi thua cược bằng cách bắt cá hai tay. Cá cược cùng lúc hai bên một cách khôn khéo thì không bao giờ thua đậm.
