--- a/y-kien/khac-nguoi.html
+++ b/y-kien/khac-nguoi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Khác người</title>
+<title>Cư xử khác người là tốt hay xấu</title>
 <meta name="description" content="Có nên cư xử khác người? Cư xử khác người như thế nào?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/khac-nguoi">
@@ -230,7 +230,7 @@ https://lehboi.github.io/y-kien/khac-nguoi
     </amp-facebook-like>
   </div>
 
-  <h1>Khác người</h1>
+  <h1>Cư xử khác người</h1>
 <p>Trong xã hội mà tôi đang sống, phần lớn người ta đều hành xử giống đám đông chung quanh (vậy mới tạo thành đám đông). Tạm gọi những người thường làm theo đám đông là loại thứ nhất.
 <br>Cũng có một ít người làm khác đám đông. Nhưng làm khác đám đông thì có hai kiểu: làm tốt hơn và làm xấu hơn.
 <br>Có <b>rất ít</b> người không thấy <b>ngại ngùng</b> khi làm việc gì tốt hơn những người khác, ví dụ như cầm rác trên tay đến khi gặp thùng rác mới bỏ vào thay vì vứt luôn xuống đường cho tiện. Tạm gọi những người không biết ngại này là loại thứ hai.
