--- a/en/fa/pfr/index.html
+++ b/en/fa/pfr/index.html
@@ -4,51 +4,52 @@
 <title>Personal Financial Roadmap</title>
 <meta name="description" content="Guide to Personal financial planning" />
 <meta name="keywords" content="financial, planning, personal, family, saving, retirement">
-<link rel="canonical" href="http://en.lhboi.name.vn/fa/pfr/">
-<link rel="alternate" href="http://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/" hreflang="vi">
+<link rel="alternate" href="https://en.lhboi.name.vn/fa/pfr/">
+<link rel="alternate" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/" hreflang="vi">
+<link rel="canonical" href="https://lehboi.github.io/en/fa/pfr/">
 
 <!-- in head of html file -->
-
 <meta charset='utf-8'>
 
-<script async custom-element="amp-analytics"
-    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
+
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
-<!--
-  Import the `amp-sidebar` component.
--->
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
 
 <script async custom-element="amp-facebook-like" src="https://cdn.ampproject.org/v0/amp-facebook-like-0.1.js"></script>
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+
+<!-- font-size https://css-tricks.com/snippets/css/fluid-typography/ -->
 <style amp-custom>
 html {
-  font-size: 16px;
+  font-size: 17px;
 }
 @media screen and (min-width: 320px) {
   html {
-    font-size: calc(16px + 6 * ((100vmin - 320px) / 680));
+    font-size: calc(17px + 7 * ((100vmin - 320px) / 680));
   }
 }
 @media screen and (min-width: 1000px) {
   html {
-    font-size: 22px;
+    font-size: 24px;
   }
 }
 
 amp-sidebar {
   width: 240px;
   padding-right: 2px;
-  background: blue;
-  color: #006699;
+  background: darkblue;
+  color: blue;
   font-size: 100%;
-  font-family: Montserrat, sans-serif;
+  font-family: sans-serif;
 }
 .close-sidebar{width: 30px;height: 30px;position: relative;cursor: pointer;background-color: transparent;border: none;}
 .close-sidebar:focus{outline: 2px auto #f06060;}
@@ -56,47 +57,24 @@ amp-sidebar {
 .close-sidebar span:nth-child(1){transform: rotate(45deg);}
 .close-sidebar span:nth-child(2){transform: rotate(-45deg);}
 
-#menu { margin-left: -40px; }
-#menu li {
-  list-style: none;
-  line-height: 1;
-  display: block;
-  position: relative;
-  margin: 0px;
-  padding: 3px 0px 3px 0px;
-}
-#menu ul {
-  width: 100%;
-  display: block;
-  margin: 0px;
-  padding: 0px 0px 0px 0px;
-}
-#menu ul li,
-#menu ul ul li {
-  width: 100%;
-  border-bottom: 0;
-  padding-left: 10px;
-}
-#menu ul ul ul li {
-  padding-left: 10px;
-}
-
 div.mwidth {max-width:1004px;margin: auto;}
 
 body {background-color:dimgray;}
 div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:white;background-color:black;font-family:sans-serif}
-div.title {text-align:center;font-size:160%;font-weight:bold;color:#cc0066;font-family:sans-serif}
+div.title {text-align:center;font-size:160%;font-weight:bold;color:#ffe033;font-family:serif}
 div.right {text-align:right;}
 div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:lawngreen;font-family:sans-serif}
-h2 {color:lime;font-family:sans-serif}
-h3 {color:limegreen;font-family:sans-serif}
-h4 {color:lightgreen;font-family:sans-serif}
-a {color:mediumspringgreen;}
-a:visited {color:gold;}
+h1 {text-align:center;color:#ffe033;font-family:serif}
+h2 {color:#adff33;font-family:serif}
+h3 {color:#a3ff1a;font-family:serif}
+h4 {color:#8ae600;font-family:serif}
+a {color:#ffd700;}
+a:visited {color:#e6c300;}
+.flright { float:right; margin:0px 0px 0px 5px; width:45%; }
+
 table.noborder {
   border-collapse: collapse;
   width: 100%;
@@ -106,7 +84,7 @@ table.noborder {
 }
 
 .myheader {
-    background-color:blue; 
+    background-color:darkblue; 
 }
 
 th, td {
@@ -123,38 +101,45 @@ table.withborder {
   padding: 4px;
 }
 .fbold { font-weight:bold; }
-.tmark {background-color:crimson;}
+.tmark {background-color:navy;}
 
 div.even {background-color: darkslategray}
 .red {color:red;}
 .tblue {color:deepskyblue;}
 div.footer { font-size: 80%; color: red; text-align: center; }
 
-.flright { float:right; margin:0px 0px 0px 5px; width:45%; }
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
+
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
+
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
+
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+
   .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
-}
 
+}
 
 </style>
 </head>
+
 
 <body>
   <!-- top of body -->
@@ -164,10 +149,36 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
                 <span></span>
             </button>
-  <h3 class="myheader">Financial Advice</h3>
-      <h4 class="myheader"><a href='/en/fa/pfr/'>Personal Financial Roadmap</a></h4>
-        <a href='/en/fa/pfr/pfr1'>In working years</a><br>
-        <a href='/en/fa/pfr/pfr2'>In retire years</a><br>
+  <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
+  <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
+
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+
+      <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
+
+      <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
+
+      <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
+
+  <h3 class="myheader">Kinh-nghiệm</h3>
+    <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
+
+    <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
+
+    <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
+
+  <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
+
+  <h3 class="myheader">Danh mục</h3>
+    <a href='/download/'>Download</a><br>
+    <a href='/sitemap'>Mục lục</a>
+  <h3 class="myheader"></h3>
+  <br>
+  <br>
+  <br>
+  <br>
 
   </amp-sidebar>
 <main>
@@ -177,6 +188,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       </button>
     </div>
   </div>
+  
   <div class="leftads">
   <!-- AMP Responsive Skyscrapper -->
 <amp-ad
@@ -186,6 +198,7 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="5275186684">
 </amp-ad>
+
   </div>
   <div class="rightads">
   <!-- AMP Responsive Skyscrapper -->
@@ -196,14 +209,11 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="5275186684">
 </amp-ad>
+
   </div>
   
 
   <div class="body">
-    <div class="title">Personal Financial Roadmap</div>
-<div class="right">First draft in February 2019.</div>
-<div class="right">(Read more in <a href="http://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/">Vietnamese</a>)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -216,35 +226,27 @@ data-ad-slot="5275186684">
       layout="fixed"
       data-layout="button_count"
       data-href=
-http://en.lhboi.name.vn/fa/pfr/
+http://lehboi.github.io/en/fa/pfr/
     >
     </amp-facebook-like>
   </div>
 
+  <h1>Personal Financial Roadmap</h1>
+<div class="right">First draft in February 2019.</div>
+<div class="right">(More in <a href="http://lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/">Vietnamese</a>)</div>
 <p>Easy come, easy go? We make it easy come, easy save.</p>
 <p>Ever wonder why saving money seems to be so much harder than spending it? You are not alone if you raise that question. Establish financial discipline with <b>Personal Financial Roadmap</b> (PFR) to help you achieve your financial goals and plans. We can also help you to avoid living the “Scrooge” life, where may make your life miserable from saving too much, and the restrictions you place on your expenditures are not compatible with your lifestyle. So the question here is, how much is too much saving?
 </p>
 <p>
 PFR financial budgeting tool will help you organize and allocate your funds appropriately to prepare you for a stable financial future.
 </p>
-<h1>Why Financial Planning?</h1>
+<h2>Why Financial Planning?</h2>
 <p>We all have different lifestyles. As a result, all of us will have different financial planning styles to best suit our lifestyles. Regardless if it’s the paycheque-to-paycheque life or the collecting change in a jar life, without the proper planning, it is very easy for debt to accumulate if you are not aware of how much of your money is going and where it is going, specifically.
 <br>Without a proper method and plan to save your money, it will be very hard to achieve your financial goals.
 </p>
 <p>
 Designing a long-term savings plan can be quite difficult. There are numerous variables that can influence the outcome of that plan in unexpected ways: duration of saving, economic downturn, political change, inflation, employment rates, and so much more. This could change your original plans to send your children to soccer practice and ballet lessons; to fund your teen’s college tuition and pay for their textbooks; to go on that dream vacation that you always wanted; to retire with a generous amount of money to live comfortably.
 <br>No sweat. PFR will take care of it. PFR does all the hard work for you, bypassing the difficulties associated with long-term financial planning to help you take back control of your life. Be more confident about your future finances and watch the pennies that you save today grow into dollars that you will have in abundance when you need it the most.
-</p>
-
-<h2>2 Step Process: Let’s break it down</h2>
-<p>This tool is based on 2 principles, modeled after 2 phases of a person’s life:
-</p>
-<p>Phase 1: <a href="pfr1">PFRp1</a>
-<br>1. Work and earn money to pay for your daily expenses E.g. utility bills, mortgage, car payments, groceries
-<br>2. Save for future expenses e.g. children’s college tuition, retirement 
-</p>
-<p>Phase 2: <a href="pfr2">PFRp2</a>
-<br>Spend the money you have accumulated in your long-term savings plan, whether it be pension or retirement savings.
 </p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -272,9 +274,23 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
+<h3>2 Step Process: Let’s break it down</h3>
+<p>This tool is based on 2 principles, modeled after 2 phases of a person’s life:
+</p>
+<p>Phase 1: <a href="pfr1">PFRp1</a>
+<br>1. Work and earn money to pay for your daily expenses E.g. utility bills, mortgage, car payments, groceries
+<br>2. Save for future expenses e.g. children’s college tuition, retirement 
+</p>
+<p>Phase 2: <a href="pfr2">PFRp2</a>
+<br>Spend the money you have accumulated in your long-term savings plan, whether it be pension or retirement savings.
+</p>
+
   <hr>
+Hit count <amp-iframe width="120" height="30" frameborder="0"
+srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
+</amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
-  Click one of following buttons to contact
+  Bấm các nút sau để liên-lạc 
   <br>
   <a href="http://twitter.com/GiauCham" target="_blank"><amp-img src="/images/icons/Twitter-256.png" layout="fixed" width="40" height="40" alt="Twiter"></amp-img></a> 
   <a href="http://m.me/lamgiauchacchan" target="_blank"><amp-img src="/images/icons/Fb-Messenger-128.png" layout="fixed" width="40" height="40" alt="Facebook"></amp-img></a> 
@@ -284,7 +300,7 @@ data-ad-slot="3830899615">
   <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  © 2020 Le Hong Boi. All rights reserved.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
   </div>
 </div>
 <amp-analytics type="googleanalytics">
@@ -304,5 +320,4 @@ data-ad-slot="3830899615">
 </main>
 </body>
 </html>
-
 
