--- a/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
+++ b/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Đầu tư dài hạn</title>
+<title>Ghi chép và tính hiệu quả những vụ đầu tư dài hạn</title>
 <meta name="description" content="Cách ghi chép số liệu và tính hiệu quả các vụ đầu tư dài hạn: bảo hiểm nhân thọ, quỹ đầu tư, bất động sản" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">
@@ -369,7 +369,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
