--- a/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap.html
+++ b/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tăng thu nhập</title>
+<title>Tăng thu nhập thụ động bằng cách đầu tư</title>
 <meta name="description" content="Những cách tăng thu nhập của gia đình để tăng mức sống, mau tự do tài chính, về hưu sớm" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, thu nhập">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap">
@@ -329,7 +329,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
