--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -126,6 +126,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -176,8 +177,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   
 
   <div class="body">
-    <div class="title">Những kinh-nghiệm linh-tinh trong cuộc-sống</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -196,6 +195,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   </div>
 
 <!-- body here -->
+  <h1>Những kinh-nghiệm linh-tinh trong cuộc-sống</h1>
 <dl>
   <dt><a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
