--- a/kinh-nghiem/may-tinh/in-sach-nho.html
+++ b/kinh-nghiem/may-tinh/in-sach-nho.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>In sách nhỏ</title>
+<title>In sách nhỏ cỡ A7 trên giấy A4</title>
 <meta name="description" content="In sách bỏ túi cỡ A7 bằng máy in phun khổ A4" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/in-sach-nho">
@@ -303,7 +303,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
