--- a/kinh-nghiem/may-tinh/linux-3.html
+++ b/kinh-nghiem/may-tinh/linux-3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Linux (3)</title>
+<title>Vài kinh nghiệm dùng máy Linux (3)</title>
 <meta name="description" content="Trang 3: Một vài kinh nghiệm dùng máy Linux: kernel, RAID, LVM, file system" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/linux-3">
@@ -230,7 +230,6 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/linux
     </amp-facebook-like>
   </div>
 
-  <h1>Linux (3)</h1>
 <h2>Tăng kích thước file system trong logical volume</h2>
 <p>Dùng Logical Volume (LVM) để chứa file system rất tiện ở chỗ là có thể tăng kích thước khi file system bị hết chỗ. Nếu các đĩa cứng đang dùng còn dư chỗ chưa dùng đến thì cho nó vào volume group rồi cho logical volume đang đầy nở đến chỗ đó. Nếu các đĩa cứng đang dùng đã hết chỗ thì mua thêm ổ cứng mới gắn vào volume group.</p>
 <p>Để tăng kích thước thì làm các lệnh sau:</p>
@@ -311,7 +310,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
