--- a/kinh-nghiem/may-tinh/linux.html
+++ b/kinh-nghiem/may-tinh/linux.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Linux</title>
+<title>Vài kinh nghiệm dùng máy Linux</title>
 <meta name="description" content="Một vài kinh nghiệm dùng máy Linux: kernel, RAID, LVM, file system" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/linux">
@@ -231,7 +231,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/linux
     </amp-facebook-like>
   </div>
 
-  <h1>Linux</h1>
+  <h1>Vài kinh nghiệm dùng máy Linux</h1>
 <h2>Để máy Linux không bao giờ bị treo cứng lâu</h2>
 <p>Kernel của Linux có các module để điều khiển các mạch watchdog trong máy. Các mạch watchdog đó có tính chất là một khi đã được bật lên rồi thì phải đụng đến nó đều đặn. Nếu nó thấy để lâu không đụng tới thì nó sẽ khởi động lại máy giống như ta bấm nút Reset.</p>
 <p>Các máy PC trong khoảng 10 năm tuổi trở xuống thường có mạch watchdog sẵn trong mainboard. Có nhiều mạch watchdog tích hợp trong các chipset khác nhau, ví dụ như chip 8xx ICH của Intel, chip 83627HF của Winbond, chip M1535 của Ali… Để biết mainboard đang dùng có mạch watchdog nào thì phải biết nó dùng chipset nào bằng cách xem tài liệu hoặc lấy kính lúp coi số hiệu mấy con chip trên mainboard. Mainboard tôi đang dùng có chip ICH5 của Intel và có luôn chip 83627HF của Winbond, chỉ có watchdog trong ICH5 được dùng còn watchdog trong Winbond không dùng. Mainboard Pentium 100 thì cũng có chip 83877 của Winbond nhưng lại không được nối tới mạch reset nên không dùng được.</p>
@@ -304,7 +304,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
