--- a/kinh-nghiem/may-tinh/raspberrypi.html
+++ b/kinh-nghiem/may-tinh/raspberrypi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>RaspberryPi</title>
+<title>Máy tính cỡ bàn tay RaspberryPi</title>
 <meta name="description" content="Máy tính tí hon RaspberryPi làm trung tâm giải trí gia đình" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, raspberrypi">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/raspberrypi">
@@ -278,7 +278,7 @@ data-ad-slot="3830899615">
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://www.facebook.com/boi.hong.le/posts/602325189780868" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
