--- a/y-kien/index.html
+++ b/y-kien/index.html
@@ -126,6 +126,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -176,8 +177,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   
 
   <div class="body">
-    <div class="title">Những suy-nghĩ về các vấn-đề trong xã-hội</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -196,6 +195,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   </div>
 
 <!-- body here -->
+  <h1>Những suy-nghĩ về các vấn-đề trong xã-hội</h1>
 <dl>
   <dt><a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a></dt>
   <dt><a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a></dt>
