--- a/y-kien/tien-va-mau.html
+++ b/y-kien/tien-va-mau.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tiền và Máu</title>
+<title>Tiền và Máu trong cuộc sống</title>
 <meta name="description" content="Những điều giống nhau và khác nhau giữa Tiền và Máu" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/y-kien/tien-va-mau">
