--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <head>
 <title>So-sánh công-cụ tích-luỹ dài-hạn</title>
-<meta name="description" content="So sánh các công cụ tích luỹ dài hạn: vàng, ngoại tệ, nhà-đất, ngân hàng, cổ phiếu. Các tính chất chống trượt giá, an toàn, thanh khoản của các công cụ trên." />
+<meta name="description" content="So sánh các tính chất chống trượt giá, an toàn, thanh khoản của vàng, ngoại tệ, nhà-đất, ngân hàng, cổ phiếu." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tích luỹ, dài hạn, vàng, đô-la, bất động sản, quỹ đầu tư, sổ tiết kiệm">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tich-luy-dai-han">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/tich-luy-dai-han">
@@ -330,7 +330,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
