--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <head>
 <title>Tiền-điện-tử Pi</title>
-<meta name="description" content="Tiền-điện-tử Pi" />
+<meta name="description" content="Tiền-điện-tử Pi: một dự án làm ra đồng tiền dùng để giao dịch chung cho toàn thế giới. Bạn hãy nhận tiền Pi mỗi ngày." />
 <meta name="keywords" content="Pi, tiền-điện-tử, cryptocurrency, bitcoin, KYC">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/pi-network">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/pi-network">
@@ -489,7 +489,7 @@ Tài-liệu tham-khảo:
 <br>* <a href="https://www.reddit.com/r/PiNetwork/wiki/pi-wiki" target='_blank'>Reddit Pi Network</a>
 <br>Mọi ý-kiến thảo-luận xin ghi vào các trang: <a href="https://www.facebook.com/lamgiauchacchan/posts/1819584918207108" rel="nofollow" target="_blank">Facebook</a></div>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
