--- a/y-kien/bi-mat-doi-tu.html
+++ b/y-kien/bi-mat-doi-tu.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <head>
 <title>Bàn về bí-mật đời-tư</title>
-<meta name="description" content="Bàn về bí-mật đời-tư" />
+<meta name="description" content="Bàn về bí-mật đời-tư. Những điều gì cần giữ bí mật, những điều gì không cần giữ bí mật. Đừng quá lo lắng về những chi tiết." />
 <meta name="keywords" content="bảo-vệ, bí-mật, cá-nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/bi-mat-doi-tu">
 <link rel="canonical" href="https://lehboi.github.io/y-kien/bi-mat-doi-tu">
